assets/main.css
/* 
Styling below taken from:
A (more) Modern CSS Reset (no date) Piccalilli. Available at: https://piccalil.li/blog/a-more-modern-css-reset/ (Accessed: 25 November 2024).
*/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
  text-decoration: none;
  cursor: pointer;
  width: fit-content;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font-family: inherit;
  font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

/* 
Styling above taken from:
A (more) Modern CSS Reset (no date) Piccalilli. Available at: https://piccalil.li/blog/a-more-modern-css-reset/ (Accessed: 25 November 2024).
*/

* {
  --max-width: 1000px;
  --background-color: #272727;
  --background-color-light: #f3f3f3;
  --color: #fcfcfc;
  --border-radius: 1.6rem;
  --element-gap: 20px;
  --hover-transition: ease-in 0.1s;
  --box-shadow-color: #00000046;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--color);
}

.btn {
  font-size: 1.5rem;
  background-color: var(--background-color);
  color: var(--color);
  border: 0px;
  border-radius: var(--border-radius);
  padding: 8px 18px;
  transition: var(--hover-transition);
  cursor: pointer;
  text-decoration: none;
}

.btn:hover {
  background-color: #383535;
  transition: var(--hover-transition);
}

.not-exist {
  text-align: center;
}

.underline {
  color: var(--background-color);
  text-decoration: underline;
}

.underline:hover {
  font-weight: bold;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--element-gap);
  width: 100%;
  margin-bottom: var(--element-gap);
}

.remove-mg {
  margin: 0;
}

.title {
  margin-bottom: var(--element-gap);
  font-size: 1.8rem;
}

label:not([class]) {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  height: 44px;
  padding-left: 1rem;
  border-radius: var(--border-radius);
  background-color: var(--background-color);
  color: var(--color);
  font-size: 1rem;
}

label:not([class]) input,
select {
  height: 100%;
  width: 100%;
  max-height: 100%;
  max-width: 334px;
  padding: 0 0.5rem;
  border: 1px solid var(--background-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  background-color: var(--color);
  color: var(--background-color);
}

label:not([class]) select:focus-within {
  outline: 0;
  border: 3px solid var(--background-color);
}

label:not([class]) input:focus-within {
  outline: 0;
  border: 3px solid var(--background-color);
}

textarea {
  padding: 1.25rem;
  border-radius: var(--border-radius);
  resize: none;
}

.chtt_input {
  display: flex;
}

.chtt_input input {
  border-right: 0;
  border: 1px solid var(--background-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  width: 100%;
  max-width: 340px;
}

.chtt_input input:focus-within {
  outline: 0;
  border: 3px solid var(--background-color);
}

/* Navigation */
nav {
  display: flex;
  justify-content: center;
  padding: 1.6rem 1rem;
  box-shadow: 0px 1px 14px var(--box-shadow-color);
}

nav section {
  display: flex;
  align-items: center;
  gap: 0.8rem;

  @media screen and (max-width: 500px) {
    flex-direction: column;
    align-items: start;
  }
}

#inner-nav {
  width: 100%;
  max-width: var(--max-width);
  display: flex;
  justify-content: space-between;
  align-items: center;

  @media screen and (max-width: 500px) {
    flex-direction: column;
    align-items: start;
  }
}

#site-title {
  font-weight: bolder;
  font-size: 2.2rem;
}

#logout {
  font-size: 1.5rem;
  background-color: var(--background-color);
  color: var(--color);
  border-radius: var(--border-radius);
  padding: 8px 18px;
  transition: var(--hover-transition);
}

#logout:hover {
  background-color: #383535;
  transition: var(--hover-transition);
}

nav a:not([id]) {
  font-size: 1.5rem;
}

nav a:not([id]):hover {
  text-decoration: underline;
}

/* footer */
footer {
  text-align: center;
  padding-bottom: 3rem;
}

/* homepage */
#homepage section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 3rem;
  padding: 3rem 3rem 5rem 3rem;
  background-color: var(--background-color);
  color: var(--color);
}

.section-title {
  background-color: var(--color) !important;
  color: var(--background-color) !important;
  margin: 1.5rem 0 3rem 0;
  padding: 2rem !important;
  font-size: 1.6rem;
}

#homepage-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 3rem;
  padding: 0 3rem;
}

.content {
  max-width: var(--max-width);
  width: 100%;
  text-align: center;
  font-size: 1.5rem;
}

/* contributions page */
#contributions_header {
  display: flex;
  justify-content: center;
  padding: 3rem;

  @media screen and (max-width: 720px) {
    padding: 1.5rem;
  }
}

#contributions_header .content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--element-gap);
  padding: 1rem 3rem;
}

.card_container a {
  width: 100%;
  max-width: var(--max-width);
}

.contribution_card {
  display: flex;
  max-width: var(--max-width);
  width: 100%;
  gap: var(--element-gap);
  border-radius: var(--border-radius);
  background-color: var(--background-color);
  color: var(--color);
  transition: var(--hover-transition);

  @media screen and (max-width: 720px) {
    flex-direction: column;
    max-width: 350px;
  }
}

.contribution_card .tags {
  background-color: var(--color);
  color: var(--background-color);
}

.contribution_card:hover {
  box-shadow: -5px 10px 5px var(--box-shadow-color);
  transition: var(--hover-transition);
}

.contribution_card img {
  max-width: 250px;
  border-radius: 1.6rem 0 0 1.6rem;
  aspect-ratio: 1;
  object-fit: cover;

  @media screen and (max-width: 720px) {
    max-width: unset;
    border-radius: 1.6rem 1.6rem 0 0;
  }
}

.card_content {
  padding: 1.5rem 1.5rem 1.5rem 0.5rem;
  font-size: 1.2rem;

  @media screen and (max-width: 720px) {
    padding: 1.5rem;
  }
}

.card_content h3 {
  margin: 0;
}

.tags_container {
  display: flex;
  flex-wrap: wrap;
  gap: var(--element-gap);
}

.tags {
  background-color: var(--background-color);
  color: var(--color);
  width: fit-content;
  padding: 0.5rem 0.8rem;
  border-radius: var(--border-radius);
}

/* contribution page */
.contribution_page {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--element-gap);
  font-size: 1.2rem;
  padding: 1rem;
}

.contribution_content {
  max-width: var(--max-width);
  width: 100%;
}

.contribution_content h1 {
  font-size: 2.6rem;
  margin-top: 1rem;
  margin-bottom: 1.4rem;
}

.contribution_meta-data img {
    border-radius: var(--border-radius);
}

/* search form */
.search_form {
  margin-left: var(--element-gap);
}

.search_form button {
  border-radius: 0 1.6rem 1.6rem 0;
}

/* filter form */
#filters_form {
  border-radius: var(--border-radius);
}

#filters_form form {
  display: flex;
  flex-direction: column;
  gap: var(--element-gap);
}

.form_heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--element-gap);
  margin-bottom: 20px;

  @media screen and (max-width: 720px) {
    flex-direction: column;
  }
}

.form_heading h2 {
  margin: 0;
}

/* login form */
#login_page {
  display: flex;
  justify-content: center;
}

.login_form_container {
  display: flex;
  flex-direction: column;
  gap: var(--element-gap);
  padding: 3rem;
  max-width: var(--max-width);
}

.login_form_container h1 {
  margin: 0;
}

#login_form {
  display: flex;
  flex-direction: column;
  gap: var(--element-gap);
  width: 100%;
  max-width: 493px;
  padding: 2rem;
  border: 1px solid var(--background-color);
  border-radius: var(--border-radius);
}

/* admin dashboard page */
.admin_page {
  display: grid;
  grid-template-columns: 1fr 550px;
  grid-template-rows: auto repeat(2, 1fr);
  gap: 50px;
  grid-template-areas:
    "intro intro"
    "ct ht"
    "ct ht";
  padding: 1.5rem;
  height: 100%;
  max-height: calc(100vh - 195px);

  @media screen and (max-width: 1300px) {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px repeat(2, auto);
    grid-template-areas:
      "intro intro"
      "ct ct"
      "ht ht";
    max-height: max-content;
  }
}

.admin_header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--element-gap);
  width: 100%;
  max-width: var(--max-width);
  grid-area: intro;
  justify-self: center;
  margin-top: 20px;

  @media screen and (max-width: 500px) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
  }
}

.admin_header h1 {
  margin: 0;
}

.table_container {
  display: flex;
  gap: var(--element-gap);
}

#contributions_table,
#history_table {
  border-collapse: collapse;
  font-size: 1.2rem;
  border-radius: var(--border-radius);
  overflow: hidden;
  box-shadow: 0 0 20px var(--box-shadow-color);
  height: fit-content;
  width: 100%;
}

#ct_container {
  grid-area: ct;
  overflow-y: scroll;

  @media screen and (max-width: 680px) {
    overflow-x: scroll;
  }
}

#ht_container {
  grid-area: ht;
  overflow-y: scroll;

  @media screen and (max-width: 680px) {
    overflow-x: scroll;
  }
}

#contributions_table thead tr,
#history_table thead tr {
  background-color: var(--background-color);
  color: var(--color);
  text-align: left;
  font-weight: bold;
}

#contributions_table th,
td {
  padding: 1.5rem 2rem;
}

#history_table th,
td {
  padding: 1.5rem 2rem;
}

#contributions_table tbody tr,
#history_table tbody tr {
  border-bottom: 1px solid var(--background-color);
  max-height: 50px !important;
}

#contributions_table tbody .btn,
#history_table tbody .btn {
  margin: 10px 10px;
}

#contributions_table tbody tr:last-of-type,
#history_table tbody tr:last-of-type {
  border-bottom: 4px solid var(--background-color);
}

#contributions_table tbody tr:nth-child(even),
#history_table tbody tr:nth-child(even) {
  background-color: var(--background-color-light);
}

/* contribution insert modal */
#create_modal {
  border-radius: var(--border-radius);
}

#create_modal form {
  display: flex;
  flex-direction: column;
  gap: var(--element-gap);
}

/* contribution update form */
#update_page {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--element-gap);
  padding: 1.5rem;
}

#update_page header {
  width: 100%;
  max-width: var(--max-width);
}

#contributions_update {
  display: flex;
  flex-direction: column;
  gap: var(--element-gap);
  width: 100%;
  max-width: var(--max-width);
}

#contributions_update input,
#contributions_update select {
  max-width: 750px;
}

